5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1643_2447.log
== SUBMITION (2019-04-14 00:12:22) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta', falta)

elif (preco < pagamento):
	print('Troco de', troco)
-- EXECUTION TIME:
0.189922
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 00:13:12) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta ', falta)

elif (preco < pagamento):
	print('Troco de ', troco)
-- EXECUTION TIME:
0.138851
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 00:13:42) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta ', falta)

elif (preco < pagamento):
	print('Troco de ', troco)
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 00:14:22) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)

elif (preco < pagamento):
	print('Troco de',troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 00:15:42) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)

elif (preco < pagamento):
	print('Troco de',troco)
-- EXECUTION TIME:
0.13924
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 00:20:00) 
-- CODE:
preco = input()
pagamento = input()

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)

elif (preco < pagamento):
	print('Troco de',troco)
-- EXECUTION TIME:
0.13627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 4, in <module>
    f = preco - pagamento
TypeError: unsupported operand type(s) for -: 'str' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 00:21:05) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)

elif (preco =< pagamento):
	print('Troco de',troco)
-- ERROR:
File "XXXX", line 13
    elif (preco =< pagamento):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 00:21:19) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)

elif (preco <= pagamento):
	print('Troco de',troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 00:21:30) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)

elif (preco <= pagamento):
	print('Troco de',troco)
-- EXECUTION TIME:
0.144431
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
